--- a/apps/demo/src/app/main/main.component.html
+++ b/apps/demo/src/app/main/main.component.html
@@ -93,7 +93,7 @@
     ></p-button>
 
     <p-button
-      label="Login (via route change)"
+      label="Login"
       class="ml-3"
       routerLink="/primeng/login"
       icon="pi pi-sign-in"
@@ -101,10 +101,18 @@
 
     <p-button
       class="ml-3"
-      label="Login with popup window"
+      label="Login (popup window)"
       severity="secondary"
       icon="pi pi-external-link"
       [disabled]="true"
+    ></p-button>
+
+    <p-button
+      label="Reset password"
+      class="ml-3"
+      routerLink="/primeng/reset-password"
+      severity="warning"
+      icon="pi pi-replay"
     ></p-button>
   </div>
 
@@ -112,6 +120,7 @@
     <i class="pi pi-google text-2xl text-400"></i>
     Material Components
   </h1>
+  <h3 class="text-400">Coming soon...</h3>
   <div class="mb-3">
     <p-button
       label="Sign up for account"
@@ -122,7 +131,7 @@
     ></p-button>
 
     <p-button
-      label="Login (via route change)"
+      label="Login"
       class="ml-3"
       routerLink="/material/login"
       icon="pi pi-sign-in"
@@ -131,10 +140,18 @@
 
     <p-button
       class="ml-3"
-      label="Login with popup window"
+      label="Login (popup window)"
       severity="secondary"
       icon="pi pi-external-link"
       [disabled]="true"
+    ></p-button>
+
+    <p-button
+      label="Reset password"
+      class="ml-3"
+      routerLink="/material/reset-password"
+      severity="warning"
+      icon="pi pi-replay"
     ></p-button>
   </div>
 
@@ -142,6 +159,7 @@
     <i class="pi pi-twitter text-2xl text-400"></i>
     Bootstrap Components
   </h1>
+  <h3 class="text-400">Coming soon...</h3>
   <div class="mb-3">
     <p-button
       label="Sign up for account"
@@ -152,7 +170,7 @@
     ></p-button>
 
     <p-button
-      label="Login (via route change)"
+      label="Login"
       class="ml-3"
       routerLink="/bootstrap/login"
       icon="pi pi-sign-in"
@@ -161,10 +179,18 @@
 
     <p-button
       class="ml-3"
-      label="Login with popup window"
+      label="Login (popup window)"
       severity="secondary"
       icon="pi pi-external-link"
       [disabled]="true"
+    ></p-button>
+
+    <p-button
+      label="Reset password"
+      class="ml-3"
+      routerLink="/bootstrap/reset-password"
+      severity="warning"
+      icon="pi pi-replay"
     ></p-button>
   </div>
   }
