--- a/apps/demo/src/app/toolbar/toolbar.component.html
+++ b/apps/demo/src/app/toolbar/toolbar.component.html
@@ -6,6 +6,20 @@
 
   <div class="p-toolbar-group-end">
     <p-button
+      icon="pi pi-github"
+      [rounded]="true"
+      [text]="true"
+      severity="secondary"
+      [link]="true"
+      (click)="openGitHub()"
+    >
+    </p-button>
+
+    <!-- <a href="https://angular.dev/" target="_blank" rel="noopener noreferrer">
+      <i class="pi pi-github"></i>
+    </a> -->
+
+    <p-button
       icon="pi pi-cog"
       [rounded]="true"
       severity="secondary"
