chore: updates tests

--- a/libs/primeng/src/lib/loading-overlay/loading-overlay.component.scss
+++ b/libs/primeng/src/lib/loading-overlay/loading-overlay.component.scss
@@ -6,5 +6,5 @@
   align-items: center;
   z-index: 250;
   flex-direction: column;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255 255 255 / 90%);
 }
