chore: adds reset password to login

--- a/libs/primeng/src/lib/login/login.component.html
+++ b/libs/primeng/src/lib/login/login.component.html
@@ -32,6 +32,10 @@
   </div>
 </p-fieldset>
 
+} @else if(forgotPassword) {
+<supabase-reset-password
+  [email]="form.value.email || ''"
+></supabase-reset-password>
 } @else {
 <!-- Login form -->
 <form [formGroup]="form" (ngSubmit)="login()">
