feat(auth): adds LogInGuard

--- a/apps/demo/src/app/main/main.component.html
+++ b/apps/demo/src/app/main/main.component.html
@@ -194,4 +194,14 @@
     ></p-button>
   </div>
   }
+
+  <div class="mt-3">
+    <p-button
+      label="Go to private route"
+      class="mr-3"
+      icon="pi pi-lock"
+      severity="warning"
+      routerLink="/private-content"
+    ></p-button>
+  </div>
 </main>
