--- a/apps/demo/src/app/private-content/private-content.component.html
+++ b/apps/demo/src/app/private-content/private-content.component.html
@@ -6,7 +6,7 @@
     <div class="text-900 font-bold text-5xl mb-3">You Made It!</div>
     <div class="text-700 text-2xl mb-5">
       Congratulations, you made it to this private route.<br />That means you
-      are logged in and passed the auth guard challenge.
+      are signed in and passed the auth guard challenge.
     </div>
     <button
       pButton
