--- a/libs/primeng/src/lib/register-or-sign-in/register-or-sign-in.component.html
+++ b/libs/primeng/src/lib/register-or-sign-in/register-or-sign-in.component.html
@@ -8,7 +8,7 @@
 @if(selection === 'register'){
 <supabase-register></supabase-register>
 } @else {
-<supabase-login></supabase-login>
+<supabase-sign-in></supabase-sign-in>
 }
 
 <!-- <p-tabView>
