--- a/libs/primeng/src/lib/register/register.component.html
+++ b/libs/primeng/src/lib/register/register.component.html
@@ -12,7 +12,7 @@
 ></supabase-wait-message>
 
 } @else {
-<!-- Login form -->
+<!-- Form -->
 <form [formGroup]="form" (ngSubmit)="register()">
   <section class="mt-4">
     <span class="flex flex-column gap-2 p-input-icon-left">
@@ -33,7 +33,7 @@
     </span>
   </section>
 
-  <!-- Login button -->
+  <!-- Action button -->
   <div class="w-full mt-4">
     <p-button
       styleClass="w-full"
