chore: bumped version

--- a/libs/primeng/src/lib/register-or-sign-in/register-or-sign-in.component.html
+++ b/libs/primeng/src/lib/register-or-sign-in/register-or-sign-in.component.html
@@ -1,31 +1,12 @@
 <p-selectButton
   [options]="stateOptions"
-  [(ngModel)]="selection"
+  [(ngModel)]="type"
   optionLabel="label"
   optionValue="value"
 ></p-selectButton>
 
-@if(selection === 'register'){
+@if(type === 'register'){
 <supabase-register></supabase-register>
 } @else {
 <supabase-sign-in></supabase-sign-in>
 }
-
-<!-- <p-tabView>
-  <p-tabPanel>
-    <ng-template pTemplate="header">
-      <i class="pi pi-user-plus mr-2"></i>
-      <span>Register</span>
-    </ng-template>
-
-    
-  </p-tabPanel>
-  <p-tabPanel header="Sign In">
-    <ng-template pTemplate="header">
-      <i class="pi pi-sign-in mr-2"></i>
-      <span>Sign In</span>
-    </ng-template>
-
-    
-  </p-tabPanel>
-</p-tabView> -->
