--- a/libs/primeng/src/lib/sign-in/sign-in.component.html
+++ b/libs/primeng/src/lib/sign-in/sign-in.component.html
@@ -125,28 +125,8 @@
   }
 
   <!-- Socials -->
-  @if(hasSocials){
-  <p-divider align="center">
-    <span class="divider-txt">or sign in with</span>
-  </p-divider>
-
-  <section class="socials grid">
-    @for(social of socialItems; track social){
-    <div class="col text-center">
-      <p-button
-        styleClass="w-full"
-        severity="secondary"
-        [outlined]="true"
-        [label]="social.title"
-        (click)="signInWithSocial(social.value)"
-      >
-        @if(social.icon){
-        <img [src]="social.icon" label="Logo" class="mr-2 idp-icon" />
-        }
-      </p-button>
-    </div>
-    }
-  </section>
-  }
+  <supabase-socials-grid
+    (errorMessage)="errorMessage.next($event)"
+  ></supabase-socials-grid>
 </form>
 }
