--- a/apps/demo/src/app/main/main.component.html
+++ b/apps/demo/src/app/main/main.component.html
@@ -59,7 +59,7 @@
   @if(supabase.isSignedIn){
   <h3>
     Display Name:
-    <p-chip label="{{ supabase.displayName | async }}"></p-chip>
+    <p-chip label="{{ supabase.userDisplayName | async }}"></p-chip>
   </h3>
   } @if(supabase.isSignedIn){
   <div>
@@ -86,14 +86,14 @@
   </h1>
   <div class="mb-3">
     <p-button
-      label="Register"
+      label="Sign Up"
       icon="pi pi-user-plus"
       severity="success"
       routerLink="/primeng/register"
     ></p-button>
 
     <p-button
-      label="Sign In"
+      label="Log In"
       class="ml-3"
       routerLink="/primeng/sign-in"
       icon="pi pi-sign-in"
@@ -131,7 +131,7 @@
   <h3 class="text-400">Coming soon...</h3>
   <div class="mb-3">
     <p-button
-      label="Register"
+      label="Sign Up"
       icon="pi pi-user-plus"
       severity="success"
       routerLink="/material/register"
@@ -139,7 +139,7 @@
     ></p-button>
 
     <p-button
-      label="Sign In"
+      label="Log In"
       class="ml-3"
       routerLink="/material/sign-in"
       icon="pi pi-sign-in"
@@ -180,7 +180,7 @@
   <h3 class="text-400">Coming soon...</h3>
   <div class="mb-3">
     <p-button
-      label="Register"
+      label="Sign Up"
       icon="pi pi-user-plus"
       severity="success"
       routerLink="/bootstrap/register"
@@ -188,7 +188,7 @@
     ></p-button>
 
     <p-button
-      label="Sign In"
+      label="Log In"
       class="ml-3"
       routerLink="/bootstrap/sign-in"
       icon="pi pi-sign-in"
