chore: updates color notation

--- a/libs/primeng/src/lib/user-avatar/user-avatar.component.scss
+++ b/libs/primeng/src/lib/user-avatar/user-avatar.component.scss
@@ -7,11 +7,11 @@
 }
 
 .title {
-  color: rgb(73, 80, 87);
+  color: #495057;
   font-weight: 700;
 }
 
 .subtitle {
-  color: rgb(108, 117, 125);
+  color: #6c757d;
   font-weight: 400;
 }
