--- a/libs/primeng/src/lib/user-avatar-button/user-avatar-button.component.html
+++ b/libs/primeng/src/lib/user-avatar-button/user-avatar-button.component.html
@@ -4,6 +4,7 @@
     [initials]="initials"
     [title]="title"
     [subtitle]="subtitle"
+    [image]="image"
   ></supabase-user-avatar>
 
   @if(!loading){
