--- a/libs/primeng/src/lib/user-avatar/user-avatar.component.html
+++ b/libs/primeng/src/lib/user-avatar/user-avatar.component.html
@@ -1,6 +1,7 @@
 <p-avatar
-  [label]="loading ? '' : initials"
+  [label]="loading || image ? '' : initials"
   [icon]="loading ? 'pi pi-spin pi-spinner' : ''"
+  [image]="image || undefined"
   shape="circle"
   styleClass="mr-2"
 ></p-avatar>
