chore: bumped version

--- a/libs/primeng/src/lib/set-password/set-password.component.html
+++ b/libs/primeng/src/lib/set-password/set-password.component.html
@@ -58,7 +58,7 @@
 <p-button
   styleClass="w-full"
   icon="pi pi-check"
-  [label]="saving() ? 'Saving password...' : 'Save Password'"
+  [label]="saving() ? savingLabel : saveLabel"
   [disabled]="form.invalid"
   [loading]="saving()"
   (click)="submit()"
