--- a/apps/demo/src/app/main/main.component.html
+++ b/apps/demo/src/app/main/main.component.html
@@ -13,7 +13,10 @@
     <p-fieldset legend="Getting Started">
       <p class="m-0">
         The purpose of this demo site is to demonstrate the usage of the
-        <a href="https://github.com/rustygreen/ng-supabase" target="_blank"
+        <a
+          href="https://github.com/rustygreen/ng-supabase"
+          target="_blank"
+          rel="noopener"
           >ng-supabase</a
         >
         library. "ng-supabase" is a library that provides various components for
@@ -26,7 +29,10 @@
       <ol>
         <li>
           Create a
-          <a href="https://supabase.com/dashboard" target="_blank"
+          <a
+            href="https://supabase.com/dashboard"
+            target="_blank"
+            rel="noopener"
             >Supabase project</a
           >
         </li>
@@ -40,6 +46,7 @@
           <a
             href="https://supabase.com/docs/reference/javascript/initializing#initializing"
             target="_blank"
+            rel="noopener"
             >docs here</a
           >)
         </li>
@@ -233,3 +240,44 @@
     ></p-button>
   </div>
 </main>
+
+<p-dialog
+  header="Connect to Supabase"
+  [modal]="true"
+  [closable]="false"
+  [(visible)]="supabaseNeedsConfigured"
+>
+  <span class="p-text-secondary block mb-5">
+    Connect the application to your supabase instance.
+  </span>
+
+  <h4>Steps:</h4>
+  <ol>
+    <li>
+      Create a
+      <a href="https://supabase.com/dashboard" target="_blank" rel="noopener"
+        >Supabase project</a
+      >
+      (if needed)
+    </li>
+    <li>Enter your instance details below</li>
+  </ol>
+
+  <ng-supabase-settings></ng-supabase-settings>
+  <!-- <div class="flex align-items-center gap-3 mb-3">
+    <label for="username" class="font-semibold w-6rem">Username</label>
+    <input pInputText id="username" class="flex-auto" autocomplete="off" />
+  </div>
+  <div class="flex align-items-center gap-3 mb-5">
+    <label for="email" class="font-semibold w-6rem">Email</label>
+    <input pInputText id="email" class="flex-auto" autocomplete="off" />
+  </div> -->
+  <!-- <div class="flex justify-content-end gap-2">
+    <p-button
+      label="Cancel"
+      severity="secondary"
+      (onClick)="supabaseNeedsConfigured = false"
+    />
+    <p-button label="Save" (onClick)="supabaseNeedsConfigured = false" />
+  </div> -->
+</p-dialog>
