--- a/apps/demo/src/app/main/main.component.html
+++ b/apps/demo/src/app/main/main.component.html
@@ -248,7 +248,7 @@
   [(visible)]="supabaseNeedsConfigured"
 >
   <span class="p-text-secondary block mb-5">
-    Connect the application to your supabase instance.
+    Connect this app to your supabase instance.
   </span>
 
   <h4>Steps:</h4>
@@ -263,21 +263,8 @@
     <li>Enter your instance details below</li>
   </ol>
 
-  <ng-supabase-settings></ng-supabase-settings>
-  <!-- <div class="flex align-items-center gap-3 mb-3">
-    <label for="username" class="font-semibold w-6rem">Username</label>
-    <input pInputText id="username" class="flex-auto" autocomplete="off" />
-  </div>
-  <div class="flex align-items-center gap-3 mb-5">
-    <label for="email" class="font-semibold w-6rem">Email</label>
-    <input pInputText id="email" class="flex-auto" autocomplete="off" />
-  </div> -->
-  <!-- <div class="flex justify-content-end gap-2">
-    <p-button
-      label="Cancel"
-      severity="secondary"
-      (onClick)="supabaseNeedsConfigured = false"
-    />
-    <p-button label="Save" (onClick)="supabaseNeedsConfigured = false" />
-  </div> -->
+  <ng-supabase-settings
+    [useConfigValues]="false"
+    (saved)="supabaseNeedsConfigured = false"
+  ></ng-supabase-settings>
 </p-dialog>
