chore: adds redirect URL step in settings component

--- a/apps/demo/src/app/main/main.component.html
+++ b/apps/demo/src/app/main/main.component.html
@@ -260,6 +260,17 @@
       >
       (if needed)
     </li>
+    <li>
+      Add <small class="url">https://ng-supabase.netlify.app</small> as a
+      redirect URL
+      <a
+        href="https://supabase.com/docs/guides/auth/redirect-urls"
+        rel="noopener"
+        target="_blank"
+        aria-label="Docs"
+        ><i class="pi pi-info-circle"></i
+      ></a>
+    </li>
     <li>Enter your instance details below</li>
   </ol>
 
