--- a/libs/primeng/src/lib/reset-password/reset-password.component.html
+++ b/libs/primeng/src/lib/reset-password/reset-password.component.html
@@ -45,6 +45,9 @@
   </div>
 
   <!-- Error message -->
-  <p-messages [value]="messages()" [enableService]="false"> </p-messages>
+  @for (message of messages(); track message;) {
+  <p-message [text]="message.text" [closable]="true" severity="danger">
+  </p-message>
+  }
 </form>
 }
