--- a/libs/primeng/src/lib/set-password/set-password.component.html
+++ b/libs/primeng/src/lib/set-password/set-password.component.html
@@ -36,13 +36,10 @@
   }
 </form>
 
-<p-messages
-  [value]="messages()"
-  [enableService]="false"
-  [closable]="true"
-  severity="danger"
->
-</p-messages>
+@for (message of messages(); track message;) {
+<p-message [text]="message.text" [closable]="true" severity="danger">
+</p-message>
+}
 
 <!-- Bottom. -->
 @if(confirmPassword){
