--- a/libs/primeng/src/lib/sign-in/sign-in.component.scss
+++ b/libs/primeng/src/lib/sign-in/sign-in.component.scss
@@ -8,3 +8,31 @@
 input {
   min-width: 260px;
 }
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-auto {
+  flex: 1 1 auto;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
