--- a/apps/demo/src/app/toolbar/toolbar.component.html
+++ b/apps/demo/src/app/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <p-toolbar>
-  <div class="p-toolbar-group-start">
+  <div class="p-toolbar-group-start flex items-center">
     <img class="mr-2" src="/assets/supabase-logo.png" alt="Supabase logo" />
-    <h1 class="m-0 mr-2">ng-supabase</h1>
+    <h2>ng-supabase</h2>
   </div>
 
   <div class="p-toolbar-group-end">
