chroe: more fixes for primeng 18 upgrade

--- a/apps/demo/src/app/main/main.component.html
+++ b/apps/demo/src/app/main/main.component.html
@@ -259,7 +259,7 @@
   </span>
 
   <h4>Steps:</h4>
-  <ol>
+  <ol class="list-decimal ml-8">
     <li>
       Create a
       <a href="https://supabase.com/dashboard" target="_blank" rel="noopener"
