--- a/apps/demo/src/app/settings/settings.component.html
+++ b/apps/demo/src/app/settings/settings.component.html
@@ -1,57 +1,57 @@
 <form [formGroup]="form" (ngSubmit)="save()">
-  <section class="mt-4">
-    <span class="flex flex-column gap-2 p-input-icon-left">
-      <label for="url"
-        >Supabase API URL or Project ID
-        <a
-          href="https://supabase.com/dashboard/projects"
-          target="_blank"
-          rel="noopener"
-          title="Click for details"
-          ><i class="pi pi-info-circle"></i></a
-      ></label>
+  <section
+    class="mt-4 flex justify-between gap-2 p-input-icon-left items-center"
+  >
+    <label for="url"
+      >Supabase API URL or Project ID
+      <a
+        href="https://supabase.com/dashboard/projects"
+        target="_blank"
+        rel="noopener"
+        title="Click for details"
+        ><i class="pi pi-info-circle"></i></a
+    ></label>
 
-      <span class="p-input-icon-left">
-        <i class="pi pi-link"></i>
-        <input
-          id="url"
-          type="text"
-          pInputText
-          class="w-full"
-          autocomplete="off"
-          formControlName="url"
-          (keydown.enter)="save()"
-        />
-      </span>
-    </span>
+    <p-iconfield iconPosition="left">
+      <p-inputicon styleClass="pi pi-link" />
+      <input
+        id="url"
+        type="text"
+        pInputText
+        class="w-full"
+        autocomplete="off"
+        formControlName="url"
+        (keydown.enter)="save()"
+      />
+    </p-iconfield>
   </section>
 
-  <section class="mt-4">
-    <span class="flex flex-column gap-2 p-input-icon-left">
-      <label for="key"
-        >Supabase Anonymous API Key
-        <a
-          href="https://supabase.com/docs/guides/api/api-keys#the-anon-key"
-          target="_blank"
-          rel="noopener"
-          title="Click for details"
-          ><i class="pi pi-info-circle"></i
-        ></a>
-      </label>
+  <section
+    class="mt-4 flex justify-between gap-2 p-input-icon-left items-center"
+  >
+    <label for="key"
+      >Supabase Anonymous API Key
+      <a
+        href="https://supabase.com/docs/guides/api/api-keys#the-anon-key"
+        target="_blank"
+        rel="noopener"
+        title="Click for details"
+        ><i class="pi pi-info-circle"></i
+      ></a>
+    </label>
 
-      <span class="p-input-icon-left">
-        <i class="pi pi-key"></i>
-        <input
-          id="key"
-          type="text"
-          pInputText
-          class="w-full"
-          autocomplete="off"
-          formControlName="key"
-          (keydown.enter)="save()"
-        />
-      </span>
-    </span>
+    <p-iconfield iconPosition="left">
+      <p-inputicon styleClass="pi pi-key" />
+      <input
+        id="key"
+        type="text"
+        pInputText
+        class="w-full"
+        autocomplete="off"
+        formControlName="key"
+        (keydown.enter)="save()"
+      />
+    </p-iconfield>
   </section>
 
   <section class="mt-4 flex justify-content-center">
