--- a/apps/demo/src/app/toolbar/toolbar.component.html
+++ b/apps/demo/src/app/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
     <h2>ng-supabase</h2>
   </div>
 
-  <div class="p-toolbar-group-end">
+  <div class="p-toolbar-group-end flex items-center">
     <p-button
       icon="pi pi-github"
       class="mr-2"
