--- a/libs/primeng/src/lib/reset-password/reset-password.component.html
+++ b/libs/primeng/src/lib/reset-password/reset-password.component.html
@@ -18,8 +18,8 @@
     <span class="flex flex-column gap-2 p-input-icon-left">
       <label for="email">Email address</label>
 
-      <span class="p-input-icon-left">
-        <i class="pi pi-envelope"></i>
+      <p-iconfield iconPosition="left">
+        <p-inputicon styleClass="pi pi-envelope" />
         <input
           id="email"
           type="email"
@@ -29,7 +29,7 @@
           formControlName="email"
           (keydown.enter)="resetPassword()"
         />
-      </span>
+      </p-iconfield>
     </span>
   </section>
 
@@ -45,9 +45,6 @@
   </div>
 
   <!-- Error message -->
-  @for (message of messages(); track message;) {
-  <p-message [text]="message.text" [closable]="true" severity="danger">
-  </p-message>
-  }
+  <supabase-messages class="mt-4" [messages]="messages()"></supabase-messages>
 </form>
 }
