--- a/libs/primeng/src/lib/set-password/set-password.component.html
+++ b/libs/primeng/src/lib/set-password/set-password.component.html
@@ -8,24 +8,24 @@
   (ngSubmit)="submit()"
   (keydown.enter)="submit()"
 >
-  <span class="p-float-label">
+  <p-floatlabel>
     <p-password
       formControlName="password"
       [feedback]="true"
       [toggleMask]="true"
     ></p-password>
     <label for="password">New password</label>
-  </span>
+  </p-floatlabel>
 
   @if(confirmPassword){
-  <span class="p-float-label ml-3">
+  <p-floatlabel class="ml-3">
     <p-password
       formControlName="confirm"
       [feedback]="false"
       [toggleMask]="true"
     ></p-password>
     <label for="password">Confirm new password</label>
-  </span>
+  </p-floatlabel>
   } @else {
   <p-button
     label="Set password"
@@ -36,16 +36,13 @@
   }
 </form>
 
-@for (message of messages(); track message;) {
-<p-message [text]="message.text" [closable]="true" severity="danger">
-</p-message>
-}
+<supabase-messages class="mt-4" [messages]="messages()"></supabase-messages>
 
 <!-- Bottom. -->
 @if(confirmPassword){
 <p-divider align="center">
   @if(confirmMisMatch()){
-  <span class="text-red-500">
+  <span class="text-invalid">
     <i class="pi pi-exclamation-triangle"></i>
     Passwords do not match
   </span>
