--- a/libs/primeng/src/lib/set-password/set-password.component.scss
+++ b/libs/primeng/src/lib/set-password/set-password.component.scss
@@ -7,3 +7,11 @@
 p-message {
   margin-top: 20px;
 }
+
+.text-invalid {
+  color: var(--p-floatlabel-invalid-color);
+}
+
+.mt-4 {
+  margin-top: 1.5rem;
+}
