--- a/libs/primeng/src/lib/user-avatar/user-avatar.component.scss
+++ b/libs/primeng/src/lib/user-avatar/user-avatar.component.scss
@@ -15,3 +15,24 @@
   color: #6c757d;
   font-weight: 400;
 }
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
