--- a/libs/primeng/src/lib/wait-message/wait-message.component.html
+++ b/libs/primeng/src/lib/wait-message/wait-message.component.html
@@ -1,12 +1,12 @@
 @if(message){
 <p-fieldset>
   <ng-template pTemplate="header">
-    <div class="flex align-items-center gap-2 px-2">
+    <div class="flex items-center gap-2 px-2">
       <i [ngClass]="message.icon"></i>
       <span class="font-bold">{{ message.title }}</span>
     </div>
   </ng-template>
-  <div>
+  <div class="p-3">
     <p class="m-0" [innerHTML]="message.message"></p>
     <p class="mt-4 text-right">
       <small
