chore: updates styling

--- a/libs/primeng/src/lib/sign-in/sign-in.component.html
+++ b/libs/primeng/src/lib/sign-in/sign-in.component.html
@@ -113,7 +113,7 @@
   <div class="w-full mt-4">
     <p-button
       styleClass="w-full"
-      [label]="form.value.usePassword ? 'Sign In' : 'Next'"
+      [label]="form.value.usePassword ? 'Sign In' : 'Continue'"
       [disabled]="form.invalid || form.disabled"
       (click)="signIn()"
     ></p-button>
