--- a/libs/primeng/src/lib/set-password/set-password.component.scss
+++ b/libs/primeng/src/lib/set-password/set-password.component.scss
@@ -15,3 +15,13 @@ p-message {
 .mt-4 {
   margin-top: 1.5rem;
 }
+
+.w-full {
+  width: 100%;
+}
+
+:host ::ng-deep {
+  .w-full {
+    width: 100%;
+  }
+}
